--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .container-calculadora{
     width: 45%;
     min-width: 450px;
@@ -116,5 +120,24 @@
     .container-historial {
         border-radius: 6px;
         width: 85%;
+    }
+}
+
+
+@media (max-width: 700px){
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
+
+    .container-calculadora{
+        width: 70%;
+    }
+
+    .container-historial {
+        border-radius: 6px;
+        width: 70%;
     }
 }
